# equationNN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  data.py  ds.py  eval.py  evaluation.py  ext_solver.py  gen.py  gen_test.py  generate.py  large_args.py  main  main.py  model.py  proofkernel.py  requirements.txt  rewritepath.py  rl.py  scenario.py  small_args.py  solve_rl.py  syntax_fuzzer.py  test.ipynb  test.py  tokenizer.py  toplevel.py  train.py  utilities.py
acn_theory/: gen_test.py  rewritepath.py  scenario.py  test.py  train.py
algdesc/: OML.alg  OMLext.alg  OMLext_examples.txt  eq387.alg
datagen/: __init__.py  dataset.py  labelled.py
env/: scenario.py
envbackend/: CMakeLists.txt  main.cpp  pybind_interface.cpp
envbackend/src/: .gitignore  CMakeLists.txt  ENVBACKEND.g4  algebra.cpp  algebra.hpp  env.cpp  env.hpp  envbackend.hpp  parser.cpp  parser.hpp  utils.cpp  utils.hpp
envbackend/test/: CMakeLists.txt  test_ualg.cpp
ext_solver/: __init__.py  vampire_solver.py
model/: __init__.py  args.py  generate.py  model.py  small_args.py  tokenizer.py
oldfiles/: ds.py  gen.py  gen_test.py  proofkernel.py  rewritepath.py  toplevel.py  train.py
pysrc/: evaluation.py  ext_solver.py  multi_target_CEL.py  problems.py  proof.py  rl.py  syntax_fuzzer.py  utilis.py
pysrc/env/: __init__.py  backend_interface.py  scenario.py
pysrc/model/: args.py  generate.py  model.py
pysrc/tasks/: task_adv_rl.py  task_gen_rl_vampire.py  task_gen_valid_check.py  task_get_vocab.py  task_instance_by_vampire.py  task_model_info.py  task_ntok_machine.py  task_parse_examples.py  task_sol_rl_fuzzer.py  task_syn_gen_examples.py  task_synfuzzer.py  task_test_intere_example.py  task_test_intere_model.py  task_test_intere_synfuzzer.py  task_test_modelfuzzer_examples.py  task_test_synfuzzer_examples.py
pysrc/tests/: test_envbackend.py  test_model.py  test_tasks.py  test_utilis.py
pyualg/: __init__.py  core.py  parser.py  test_parser.py
randomgen/: __init__.py  genrules.py
tests/: pytest.ini  test_envbackend.py  test_ext_solver.py  test_formallan.py  test_gen.py  test_labelled.py  test_model.py  test_scenario.py
treenn/: __init__.py  formallan.py  parser.py  rules.py
